<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/cv_profile"
        android:enabled="true"
        android:icon="@drawable/ic_document"
        android:title="@string/cv_profile"
        />
    <item
        android:id="@+id/top_comment"
        android:enabled="true"
        android:icon="@drawable/ic_comment"
        android:title="@string/top_comment"/>
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"/>
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/account"/>
</menu>